@@ -19,6 +19,7 @@ G_BEGIN_DECLS enum
 
 #define ENCODING_TYPE_RAW                   0
 #define ENCODING_TYPE_COPYRECT              1
+#define ENCODING_TYPE_RRE                   2
 
 typedef struct _RfbDecoder RfbDecoder;
 
@@ -46,6 +47,7 @@ struct _RfbDecoder
   guint security_type;
 
   gchar *password;
+  gboolean use_copyrect;
 
   guint width;
   guint height;
@@ -102,6 +104,8 @@ void rfb_decoder_send_key_event (RfbDecoder * decoder,
     guint key, gboolean down_flag);
 void rfb_decoder_send_pointer_event (RfbDecoder * decoder,
     gint button_mask, gint x, gint y);
+guint8 *
+	rfb_decoder_message_set_encodings ( GSList *encodings_list);
 
 G_END_DECLS
 #endif
